refactor: 확장성 고려 - result 리스트 참조변수 추상화